feat: materi join lebih detail dan terpisah

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
         "Flexoki",
-        "Leetcode"
+        "glightbox",
+        "Leetcode",
+        "lightbox"
     ]
 }
