--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/starlight": "^0.37.1",
     "astro": "^5.6.1",
+    "glightbox": "^3.3.1",
     "sharp": "^0.34.2",
     "starlight-theme-flexoki": "^0.2.1"
   }
